Add more details into the panels

--- a/_data/schedule_dec3.yml
+++ b/_data/schedule_dec3.yml
@@ -10,18 +10,20 @@
 - name: "Coffee break"
   time_start: "10:30"
   time_end: "10:45"
-- name: "Panel: Technical issues and responses to the risks and harms of the use of AI in the military"
+- name: "Panel discussion"
   time_start: "10:45"
   time_end: "12:00"
+  title: "Technical issues and responses to the risks of the use of AI in the military"
 - name: "Lunch break"
   time_start: "12:00"
   time_end: "13:30"
 - name: "Keynote talk"
   time_start: "13:30"
   time_end: "14:15"
-- name: "Panel: Role of tech workers in AI militarization and disarmament"
+- name: "Panel discussion"
   time_start: "14:15"
   time_end: "15:30"
+  title: "Role of tech workers in AI militarization and disarmament"
 - name: "Coffee break"
   time_start: "15:30"
   time_end: "15:45"
