--- a/_data/schedule_dec2.yml
+++ b/_data/schedule_dec2.yml
@@ -4,6 +4,7 @@
 - name: Opening remarks
   time_start: "09:00"
   time_end: "09:10"
+  speaker: "Organizers"
 - name: "Welcome address"
   time_start: "09:10"
   time_end: "09:30"
@@ -16,9 +17,10 @@
 - name: Coffee break
   time_start: "11:00"
   time_end: "11:15"
-- name: "Panel: Governance of AI applications in the military"
+- name: "Panel discussion"
   time_start: "11:15"
   time_end: "12:30"
+  title: "Governance of AI applications in the military"
 - name: Lunch break
   time_start: "12:30"
   time_end: "14:00"
