--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -113,7 +113,7 @@
   session: "dec2"
   tags:
     - name: Website
-      link: https://www.humanrightsnetwork.org/bernard-duhaime
+      link: https://www.ohchr.org/en/special-procedures/sr-truth-justice-reparation-and-non-recurrence/bernard-duhaime
   skip: False
 
 - fullname: Jonathan Horowitz 
