Add contributed talks

--- a/_data/schedule_dec2.yml
+++ b/_data/schedule_dec2.yml
@@ -27,9 +27,21 @@
 - name: "Keynote talk"
   time_start: "14:00"
   time_end: "14:45"
-- name: "Contributed talks"
+- name: "Contributed talk 1 (in-person)"
   time_start: "14:45"
+  time_end: "15:00"
+  speaker: "Mohamed Abdalla"
+  title: "Understanding Computer Science Students' views of Military (and Military-adjacent) Work"
+- name: "Contributed talk 2 (virtual)"
+  time_start: "15:00"
+  time_end: "15:15"
+  speaker: "Mst Rafia Islam, Azmine Toushik Wasi"
+  title: "Balancing Power and Ethics: A Framework for Addressing Human Rights Concerns in Military AI"
+- name: "Contributed talk 3 (in-person)"
+  time_start: "15:15"
   time_end: "15:30"
+  speaker: "Max Lamparth"
+  title: "Human vs. Machine: Behavioral Differences between Expert Humans and Language Models in Wargame Simulations"
 - name: "Coffee break"
   time_start: "15:30"
   time_end: "15:45"
