Add keynote mention

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
 - name: About
   link: /about.html
-- name: Speakers and Panelists
+- name: Keynote Speakers and Panelists
   link: /speakers.html
 - name: Schedule
   link: /schedule.html
