change page name

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,7 +13,7 @@
       link: /accepted-abstracts.html
 - name: Team
   link: /team.html
-- name: Reviewers
-  link: /reviewers.html
+- name: Acknowledgment
+  link: /acknowledgment.html
 - name: Code of Conduct
   link: /coc.html
