--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -139,7 +139,8 @@
   affiliations: 
   - IIIA-CSIC
   position: Tenured Scientist
-  bio: "Vanina's research focus is in the area of knowledge representation and reasoning KR&R (a subdiscipline of AI), with a focus on the formalization of knowledge dynamics, the management of inconsistent and uncertainty information and on the study of the ethical and social impact on the development and use of systems based on Artificial Intelligence. She is currently a tenured scientist at the department of Logic and Reasoning at the IIIA-CSIC."
+  bio: "Vanina's research focus is in the area of knowledge representation and reasoning KR&R (a subdiscipline of AI), with a focus on the formalization of knowledge dynamics, the management of inconsistent and uncertainty information and on the study of the ethical and social impact on the development and use of systems based on Artificial Intelligence. She is currently a tenured scientist at the department of Logic and Reasoning at the IIIA-CSIC.   bio: "Vanina's research focus is in the area of knowledge representation and reasoning KR&R (a subdiscipline of AI), with a focus on the formalization of knowledge dynamics, the management of inconsistent and uncertainty information and on the study of the ethical and social impact on the development and use of systems based on Artificial Intelligence. She is currently a tenured scientist at the department of Logic and Reasoning at the IIIA-CSIC. Since November 2023 she is a member of the UN Secretary-General's Advisory Body on AI."
+"
   photo: vanina.png
   alttext: Dr. Maria Vanina Martinez
   time: 
