Update Jonathan title

--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -123,7 +123,7 @@
   bio: "Jonathan is the deputy head of the legal department to the ICRC's Delegation for the United States and Canada, based in Washington, D.C. He focuses on legal issues relating to urban warfare, partnered military operations, and new and emerging technologies in armed conflict, including information operations. In this role, he engages with the U.S. and Canadian governments, as well as private technology companies and others. His latest publication is “One Click from Conflict: Some Legal Considerations Related to Technology Companies Providing Digital Services in Situations of Armed Conflict” (Chicago Journal of International Law, Vol. 24.2)."
   photo: jonathan.png
   alttext: Jonathan Horowitz
-  title: "TBD"
+  title: "AI in Armed Conflict: What Could Possibly Go Wrong?"
   abstract: "TBD"
   time: 
     - "09:45"
