--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -27,8 +27,8 @@
   bio: "Branka leads the research on the military and security implications of emerging technologies. Her work examines ethical concerns regarding the development of autonomous weapons systems and the impact of artificial intelligence and robotics on security provision and trends in warfare. She holds a PhD from the Balsillie School of International Affairs with a specialization in conflict and security. She has conducted research on post-conflict societies and published academic articles and reports on the impacts of conflict on civilians and diverse issues of security governance, including security sector reform."
   photo: branka.png
   alttext: Dr. Branka Marijan
-  title: "TBD"
-  abstract: "TBD"
+  title: "The Battle for Control: The Struggle to Regulate Military AI and Autonomous Weapons"
+  abstract: "The race to regulate military AI and autonomous weapons is fraught with hurdles. Advanced technologies are being tested in contemporary conflict zones, often bypassing ethical scrutiny in favor of tactical advantage. Technology firms, eager to 'battle test' their technology, wield growing influence over global norms, raising concerns about accountability and oversight. Meanwhile, a lack of political will among states leaves critical guardrails undeveloped, creating a regulatory vacuum. At the core, questions regarding human control over autonomous systems and AI aided decision making remain unanswered. This discussion offers a candid assessment of the challenges facing meaningful global regulation and the urgent need for action."
   time: 
     - "10:15"
     - "10:45"
