--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,6 +13,8 @@
       link: /accepted-abstracts.html
 - name: Team
   link: /team.html
+- name: Accessibility
+  link: /accessibility.html
 - name: Acknowledgments
   link: /acknowledgment.html
 - name: Code of Conduct
