--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Harms and Risks of AI in the Military
+title: HRAIM 2024
 tagline: The first workshop on Harms and Risks of AI in the Military
 email: hraim2024(at)googlegroups(dot)com 
 twitter_username: HarmsRisksAIM
