--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -92,7 +92,7 @@
   affiliations: 
   - Utrecht University School of Law
   position: Assistant professor of international law
-  bio: "Jessica is an assistant professor of international law at Utrecht University School of Law, with a focus on IHL and human rights. She is an Expert at the GC REAIM as well as Director of the Realities of Algorithmic Warfare project. Jessica was recently a keynote speaker at the Contestations AI conference in Helsinki. Her current research explores the legitimacy of military operations in light of increasing autonomy in warfare, and she recently wrote a piece for OpinioJuris about the topic."
+  bio: "Jessica Dorsey, J.D., LL.M., is an Assistant Professor of International and European Law at Utrecht University. She is a US- and Dutch-educated international lawyer with expertise in international humanitarian law, human rights law and public international law. Her current research focuses on the legitimacy of military targeting operations in light of increasing autonomy in warfare, with a specific focus on how transparency, accountability and the rule of law contribute to this legitimacy. Jessica is also a renowned legal scholar and practitioner on issues related to the use of force, especially in the context of drone warfare, having worked in the field for more than 15 years."
   photo: jessica.png
   alttext: Jessica Dorsey
   time: 
