Adjust image size

--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -93,7 +93,7 @@
   - Utrecht University School of Law
   position: Assistant professor of international law
   bio: "Jessica Dorsey, J.D., LL.M., is an Assistant Professor of International and European Law at Utrecht University. She is a US- and Dutch-educated international lawyer with expertise in international humanitarian law, human rights law and public international law. Her current research focuses on the legitimacy of military targeting operations in light of increasing autonomy in warfare, with a specific focus on how transparency, accountability and the rule of law contribute to this legitimacy. Jessica is also a renowned legal scholar and practitioner on issues related to the use of force, especially in the context of drone warfare, having worked in the field for more than 15 years."
-  photo: jessica.png
+  photo: jessica-2.png
   alttext: Jessica Dorsey
   time: 
     - "11:15"
