Change Jessica infos

--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -92,8 +92,8 @@
   affiliations: 
   - Utrecht University School of Law
   position: Assistant professor of international law
-  bio: "Jessica Dorsey, J.D., LL.M., is an Assistant Professor of International and European Law at Utrecht University. She is a US- and Dutch-educated international lawyer with expertise in international humanitarian law, human rights law and public international law. Her current research focuses on the legitimacy of military targeting operations in light of increasing autonomy in warfare, with a specific focus on how transparency, accountability and the rule of law contribute to this legitimacy. Jessica is also a renowned legal scholar and practitioner on issues related to the use of force, especially in the context of drone warfare, having worked in the field for more than 15 years."
-  photo: jessica-2.png
+  bio: "Jessica Dorsey, J.D., LL.M., is an Assistant Professor of International Law and director of the Realities of Algorithmic Warfare project at Utrecht University. She is also an Expert Member of the Global Commission on the Responsible Use of AI in the Military Domain. Her current research focuses on the legitimacy of military targeting operations in light of increasing autonomy in warfare, with a specific focus on the protection of civilians in armed conflict. Jessica is also a renowned legal scholar and practitioner on issues related to the use of force, especially in the context of drone warfare, having worked in the field for more than 15 years. She is an Associate Fellow at the International Centre for Counter-Terrorism, The Hague and the Managing Editor of the international law weblog, Opinio Juris."
+  photo: jessica-3.jpg
   alttext: Jessica Dorsey
   time: 
     - "11:15"
