--- a/_data/team.yml
+++ b/_data/team.yml
@@ -109,7 +109,7 @@
   twitter: "https://twitter.com/hamza_abdelhedi"
   linkedin: "https://www.linkedin.com/in/hamza-abdelhedi/"
 - affiliation: "Samsung SAIT AI Lab Montreal"
-  bio: Marwa is a research scientist at the Samsung SAIT AI Lab Montreal, within Mila. She is interested in discrete and continuous optimization problems in Machine learning and in AI for social good applications.
+  bio: Marwa El Halabi is a research scientist at the Samsung SAIT AI Lab Montreal, an academic-style research lab situated within Mila - Quebec AI Institute. Before that, she was a PostDoc in the Machine Learning Group at MIT. She completed her PhD in 2018 at the Computer and Communication Sciences department at EPFL. Her main research interest is discrete & continuous optimization problems in Machine learning. In particular, her research has been in submodular optimization, convex optimization, neural networks compression and structured sparsity models. She is also interested in AI for social good applications. She co-organizes a reading group at Mila, focused on the impacts of militarization of AI on society and AI disarmament.
   committee: General Committee
   email: "marwa.elhalabi@gmail.com"
   fullname: Marwa El-Halabi
