--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,6 +4,8 @@
   link: /speakers.html
 - name: Schedule
   link: /schedule.html
+- name: Presenter Instructions
+  link: /presenter-instructions.html
 - name: Abstracts
   link: /#
   dropdown:
