--- a/_data/accepted-abstracts.yml
+++ b/_data/accepted-abstracts.yml
@@ -43,7 +43,7 @@
   talk: false
 
 - title: "Examining the Past and Present: Objectives and Capabilities of Chinese AI-Powered Autonomous Weapon Systems"
-  authors: "Jean Dong"
+  authors: "Jean Dong, Ahmed Mehdi Inane, Riley Simmons-Edler, Ryan Paul Badman"
   email: "none"
   abstract: "After China was designated as America's “strategic competitor” in 2017, politicians and scholars in the West and China have gradually come to recognize “strategic competition” as a reality of international politics. The application of AI in autonomous weapon systems is particularly concerning against the backdrop of escalating rivalry between China and the US. This paper aims to utilize a historical and comparative approach to provide insights into several key questions: • What are the capabilities of Chinese AI, and to what extent has AI been integrated into their autonomous weapon systems? • How can we best understand the objectives of AI-integrated AWS in China, and how do Chinese strategic military culture and the doctrines of the Chinese Communist Party influence the development and deployment of these weapons? • What legal, ethical, and operational challenges arise from the increased autonomy of weapon systems in China and which guidelines or red lines are being observed or violated in China?"
   keywords: "China, Artificial Intelligence, Autonomous Weapon Systems"
