add posters gallery

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,6 +9,8 @@
       link: /submission.html
     - name: Accepted Abstracts
       link: /accepted-abstracts.html
+    - name: Posters Gallery
+      link: /gallery.html
 - name: Presenter Instructions
   link: /presenter-instructions.html
 - name: Accessibility
