--- a/_data/accepted-abstracts.yml
+++ b/_data/accepted-abstracts.yml
@@ -24,6 +24,7 @@
   keywords: "Military, AI Safety, Transparency, Inconsistency, Language Models, Natural Language Processing"
   poster: true
   talk: false
+  poster_link: "/posters/HRAIM_LLMWargamingInconsistency_Poster.pdf"
   OpenReview: "https://openreview.net/pdf?id=sYEnyi9OfH"
 
 - title: "Inconsistencies in Artificial Intelligence Strategy Alignment of NATO Member States"
